--- a/catalog/view/theme/default/fot_1.html
+++ b/catalog/view/theme/default/fot_1.html
@@ -225,39 +225,41 @@
 					</ol>
 				</div>
 				
-				<div class="right fot_1 clearfix">
+				<div class="right fot_text clearfix">
 					<h1 class="footer_h1">After Sale Service</h1>
-					<p>
-						The employees of hotbeautyhair mall have an obligation to enable customers 
-						to fully know and understand the product model, technical indicators, 
-						performance, use occasions, security matters during the quotation , to 
-						ensure that customers make the right choice before signing the contract. 
-						After buying the product, we will track the customer orders until the 
-						customer receives the goods, and so as the use process.</br>
-						All the products provided by hotbeautyhair mall will be commissioned to
-						the third-party professional logistics companies or Courier Company for 
-						delivery. Our top quality service will be embodied in the whole logistics 
-						process. If customers are dissatisfied with our service or delivery, they 
-						can contact with customer service or get assistance from salesman in 
-						hotbeautyhair mall. At the same time, hotbeautyhair mall will regularly 
-						test service process to avoid the occurrence of such phenomena.</br>
-						Hotbeautyhair mall and logistics partners will take the risk of product 
-						damage in the process of logistics services, as well as we will try to 
-						avoid such this phenomenon. After you receipted the goods, hotbeautyhair 
-						strongly recommends that you should check the appearance, quantity, hair 
-						accessories and other aspects of the goods carefully. Hotbeautyhair mall 
-						will do its best to avoid this issues happen,which is related with logistic 
-						delivery.such as goods damage. Hotbeautyhair Mall will always focus on 
-						customer experience, properly handle service issues during use.</br>
-						Non-disposable product quality problems occur during goods quality 
-						guarantee period,which is made by the non-used improperly, Non-human
-						factor damage, non-third party factors and so on. Hotbeautyhair mall 
-						will make a proper coordination timely when the mall receive the call
-						or the written notice.</br>
-						After-sale service: Perfectionism return and exchange service as well as 
-						refund system.providing the best after-sale guarantee for you.</br>
-						Any question, please contact us.
-					</p>
+					<div class="fot_1">
+						<p>
+							The employees of hotbeautyhair mall have an obligation to enable customers 
+							to fully know and understand the product model, technical indicators, 
+							performance, use occasions, security matters during the quotation , to 
+							ensure that customers make the right choice before signing the contract. 
+							After buying the product, we will track the customer orders until the 
+							customer receives the goods, and so as the use process.</br>
+							All the products provided by hotbeautyhair mall will be commissioned to
+							the third-party professional logistics companies or Courier Company for 
+							delivery. Our top quality service will be embodied in the whole logistics 
+							process. If customers are dissatisfied with our service or delivery, they 
+							can contact with customer service or get assistance from salesman in 
+							hotbeautyhair mall. At the same time, hotbeautyhair mall will regularly 
+							test service process to avoid the occurrence of such phenomena.</br>
+							Hotbeautyhair mall and logistics partners will take the risk of product 
+							damage in the process of logistics services, as well as we will try to 
+							avoid such this phenomenon. After you receipted the goods, hotbeautyhair 
+							strongly recommends that you should check the appearance, quantity, hair 
+							accessories and other aspects of the goods carefully. Hotbeautyhair mall 
+							will do its best to avoid this issues happen,which is related with logistic 
+							delivery.such as goods damage. Hotbeautyhair Mall will always focus on 
+							customer experience, properly handle service issues during use.</br>
+							Non-disposable product quality problems occur during goods quality 
+							guarantee period,which is made by the non-used improperly, Non-human
+							factor damage, non-third party factors and so on. Hotbeautyhair mall 
+							will make a proper coordination timely when the mall receive the call
+							or the written notice.</br>
+							After-sale service: Perfectionism return and exchange service as well as 
+							refund system.providing the best after-sale guarantee for you.</br>
+							Any question, please contact us.
+						</p>
+					</div>
 				
 				</div>
 				
