--- a/catalog/view/theme/default/fot_2.html
+++ b/catalog/view/theme/default/fot_2.html
@@ -225,95 +225,97 @@
 					</ol>
 				</div>
 				
-				<div class="right fot_2 clearfix">
+				<div class="right fot_text clearfix">
 					<h1 class="footer_h1">FAQ</h1>
 					
-					<div class="text">
-					<ul>
-						<li>
-							<h2 class="bg_h2">Q1. How Much Hair Do I Need?</h2>
-							<p>
-								A: For average head size, here is my suggestion: </br>
-								12"-14": 2 bundles  </br>
-								16"-22": 3 bundles  </br>
-								24"-28": 3 bundles or more
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q2: Can the hair be straightened, curled ?</h2>
-							<p>
-								A: Yes you could use hair straightener or hair curler to style the 
-								virgin hair . However, don't do it too frequently, or the heat will 
-								make the hair easily get dry and tangled.
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q3: Can I dye/color the hair?</h2>
-							<p>
-								A:  Yes. The hair can be colored. As a general rule it is easier to 
-								darken the hair than to lighten the hair. We recommend to dye darker, 
-								since it is difficult for the original colour to fade. Brazilian 
-								virgin hair extension in competitive price.</br>
-								Improper dying will ruin the hair. We highly recommend having your 
-								hairdresser dye the Brazilian virgin hair . Colouring by yourself 
-								will take a risk of not coming out the shade you want. If you can't 
-								get to a salon, please always use a good quality products and test 
-								a small sample first.
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q4. How long does it last?</h2>
-							<p>
-								A:  How long the hair lasts depends on how you maintain it. Treat it 
-								like your own hair and take very good care of it, then normally it 
-								could last 3-5 yeas for our best one donor Brazilian hair and 1-2 
-								years for our silk Peruvian hair.
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q5. Why are my hair extensions getting tangled?</h2>
-							<p>
-								A:  It could be caused by dry hair. Please make sure to wash & 
-								condition your hair at least once a week, twice a week is better. 
-								brazilian virgin hair Comb the hair from time to time. You could 
-								go to your stylist for further suggestions.
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q6. How do I take care of my hair?</h2>
-							<p>
-								A:  Treat this hair just as if it was your own hair. </br>
-								<span><i>●</i>Prepare the warm water,not too hot and not too cold.</span>
-								<span><i>●</i>Put some shampoo and hair conditioner inside the water.</span>
-								<span><i>●</i>Put hair inside the water and wash slowly.</span>
-								<span><i>●</i>Keep hair insider the warm water 10min around.</span>
-								<span><i>●</i>Use clean warm water wash it again.</span>
-								<span><i>●</i>Unstrap the line of the hair slowly.</span>
-								<span><i>●</i>DO NOT put the hair in the sun or use hair dryer,let it dry naturally.</span> 
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q7. What type of hair care products should I use?</h2>
-							<p>
-								A:  Treat this hair extension just as if it was your own hair.</br>
-								<span><i>●</i> Use good quality shampoo and hair conditioner to care the hair. It's important to keep the hair soft and shiny./span>
-								<span><i>●</i>You could use gel or spray styling products to keep the hair style.</span>
-								<span><i>●</i>Olive oil will be a good choice to keep the hair healthy.</span>
-							</p>
-						</li>
-						<li>
-							<h2 class="bg_h2">Q8: How to tell human hair with synthetic hair?</h2>
-							<p>
-								A:  Human hair has natural protein . It is easy to tell by burning: 
-								human hair will be ash,which will go away after pinching.When 
-								burning, the human hair will show white smoke. While synthetic hair 
-								will be a sticky ball after burning and will show black smoke.
-								Moreover, human hair may have very few gray hair and split ends. 
-								It is normal and not a quality problem.
-							</p>
-						</li>
-					</ul>
-						
+					<div class="fot_2">
+						<div class="text">
+							<ul>
+								<li>
+									<h2 class="bg_h2">Q1. How Much Hair Do I Need?</h2>
+									<p>
+										A: For average head size, here is my suggestion: </br>
+										12"-14": 2 bundles  </br>
+										16"-22": 3 bundles  </br>
+										24"-28": 3 bundles or more
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q2: Can the hair be straightened, curled ?</h2>
+									<p>
+										A: Yes you could use hair straightener or hair curler to style the 
+										virgin hair . However, don't do it too frequently, or the heat will 
+										make the hair easily get dry and tangled.
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q3: Can I dye/color the hair?</h2>
+									<p>
+										A:  Yes. The hair can be colored. As a general rule it is easier to 
+										darken the hair than to lighten the hair. We recommend to dye darker, 
+										since it is difficult for the original colour to fade. Brazilian 
+										virgin hair extension in competitive price.</br>
+										Improper dying will ruin the hair. We highly recommend having your 
+										hairdresser dye the Brazilian virgin hair . Colouring by yourself 
+										will take a risk of not coming out the shade you want. If you can't 
+										get to a salon, please always use a good quality products and test 
+										a small sample first.
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q4. How long does it last?</h2>
+									<p>
+										A:  How long the hair lasts depends on how you maintain it. Treat it 
+										like your own hair and take very good care of it, then normally it 
+										could last 3-5 yeas for our best one donor Brazilian hair and 1-2 
+										years for our silk Peruvian hair.
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q5. Why are my hair extensions getting tangled?</h2>
+									<p>
+										A:  It could be caused by dry hair. Please make sure to wash & 
+										condition your hair at least once a week, twice a week is better. 
+										brazilian virgin hair Comb the hair from time to time. You could 
+										go to your stylist for further suggestions.
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q6. How do I take care of my hair?</h2>
+									<p>
+										A:  Treat this hair just as if it was your own hair. </br>
+										<span><i>●</i>Prepare the warm water,not too hot and not too cold.</span>
+										<span><i>●</i>Put some shampoo and hair conditioner inside the water.</span>
+										<span><i>●</i>Put hair inside the water and wash slowly.</span>
+										<span><i>●</i>Keep hair insider the warm water 10min around.</span>
+										<span><i>●</i>Use clean warm water wash it again.</span>
+										<span><i>●</i>Unstrap the line of the hair slowly.</span>
+										<span><i>●</i>DO NOT put the hair in the sun or use hair dryer,let it dry naturally.</span> 
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q7. What type of hair care products should I use?</h2>
+									<p>
+										A:  Treat this hair extension just as if it was your own hair.</br>
+										<span><i>●</i> Use good quality shampoo and hair conditioner to care the hair. It's important to keep the hair soft and shiny./span>
+										<span><i>●</i>You could use gel or spray styling products to keep the hair style.</span>
+										<span><i>●</i>Olive oil will be a good choice to keep the hair healthy.</span>
+									</p>
+								</li>
+								<li>
+									<h2 class="bg_h2">Q8: How to tell human hair with synthetic hair?</h2>
+									<p>
+										A:  Human hair has natural protein . It is easy to tell by burning: 
+										human hair will be ash,which will go away after pinching.When 
+										burning, the human hair will show white smoke. While synthetic hair 
+										will be a sticky ball after burning and will show black smoke.
+										Moreover, human hair may have very few gray hair and split ends. 
+										It is normal and not a quality problem.
+									</p>
+								</li>
+							</ul>
+								
+						</div>
 					</div>
 				</div>
 				
