--- a/catalog/view/theme/default/fot_3.html
+++ b/catalog/view/theme/default/fot_3.html
@@ -225,127 +225,130 @@
 					</ol>
 				</div>
 				
-				<div class="right fot_3 clearfix">
+				<div class="right fot_text clearfix">
 					<h1 class="footer_h1">Return / Exchange Policy</h1>
-					<ul>
-						<li class="clearfix">
-							<span>
-								<i class="pc_i">Reasons/Conditions</i>
-								<i class="yd_i">Reasons/</br>Conditions</i>
-							</span>
-							<span><i>Who Bear Shipping Fee</i></span>
-							<span><i>Acceptable Policy</i></span>
-							<span><i>Requirement</i></span>
-						</li>
-						<li class="clearfix">
-							<span>
-								<i class="pc_i">Dislike/unsuitable/change style/change color/cannot sell out etc.</i>
-								<i class="yd_i">Dislike/</br>unsuitable/</br>change style/</br>change color/</br>cannot sell </br>out etc.</i>
-							</span>
-							<span><i>Buyer</i></span>
-							<span>
-								<i>
-									Exchange/return within 1 month;</br>
-									return 70% after 1 month to 3 months;</br>
-									return 50% after 3 months;
-								</i>
-							</span>
-							<span><i>Unused, can still sell</i></span>
-						</li>
-						<li class="clearfix">
-							<span>
-								<i>
-									Quality problem </br>
-									(unused stock goods)
-								</i>
-							</span>
-							<span><i>Seller</i></span>
-							<span>
-								<i>
-									Exchange/return within 1 month;</br>
-									return 70% after 1 month to 3 months;</br>
-									return 50% after 3 months;
-								</i>
-							</span>
-							<span><i>Unused, can still sell</i></span>
-						</li>
-						<li class="clearfix">
-							<span>
-								<i>
-									Quality problem </br>
-									(unused stock goods)
-								</i>
-							</span>
-							<span><i>Seller</i></span>
-							<span>
-								<i>
-									Repair for free within 6 month;</br>
-									after 6 months,may not repair
-								</i>
-							</span>
-							<span>
-								<i>
-									Provide videos and pictures,</br>
-									goods send back to check
-								</i>
-							</span>
-						</li>
-						<li class="clearfix">
-							<span><i>Customed goods not as requirment</i></span>
-							<span><i>——</i></span>
-							<span><i>Exchange/return for free</i></span>
-							<span>
-								<i>
-									Send customer pictures </br>
-									when goods arrive warehouse
-								</i>
-							</span>
-						</li>
-						<li class="clearfix">
-							<span><i>Unused customed goods</i></span>
-							<span><i>Buyer</i></span>
-							<span>
-								<i>
-									Return 70% within 1 month;</br>
-									Return 50% within 1-3 months;</br>
-									cannot return/exchange after 3 months.
-								</i>
-							</span>
-							<span>
-								<i>
-									Provide videos and pictures,</br>
-									goods send back to check
-								</i>
-							</span>
-						</li>
-						<li class="clearfix">
-							<span><i>Used customed goods</i></span>
-							<span><i>Buyer</i></span>
-							<span>
-								<i>
-									Repair for free within 3 month; </br>
-									after 3 months,may not repair
-								</i>
-							</span>
-							<span>
-								<i>
-									Provide videos and pictures,</br>
-									goods send back to check
-								</i>
-							</span>
-						</li>
-						<li class="clearfix">
-							<span><i>Repair used hair</i></span>
-							<span><i>Buyer</i></span>
-							<span>
-								<i>
-									Repair for free,very old hair </br>
-									can not be repaired
-								</i>
-							</span>
-							<span><i>Provide videos and pictures to check</i></span>
-						</li>
-					</ul>
+					<div class="fot_3">
+						<ul>
+							<li class="clearfix">
+								<span>
+									<i class="pc_i">Reasons/Conditions</i>
+									<i class="yd_i">Reasons/</br>Conditions</i>
+								</span>
+								<span><i>Who Bear Shipping Fee</i></span>
+								<span><i>Acceptable Policy</i></span>
+								<span><i>Requirement</i></span>
+							</li>
+							<li class="clearfix">
+								<span>
+									<i class="pc_i">Dislike/unsuitable/change style/change color/cannot sell out etc.</i>
+									<i class="yd_i">Dislike/</br>unsuitable/</br>change style/</br>change color/</br>cannot sell </br>out etc.</i>
+								</span>
+								<span><i>Buyer</i></span>
+								<span>
+									<i>
+										Exchange/return within 1 month;</br>
+										return 70% after 1 month to 3 months;</br>
+										return 50% after 3 months;
+									</i>
+								</span>
+								<span><i>Unused, can still sell</i></span>
+							</li>
+							<li class="clearfix">
+								<span>
+									<i>
+										Quality problem </br>
+										(unused stock goods)
+									</i>
+								</span>
+								<span><i>Seller</i></span>
+								<span>
+									<i>
+										Exchange/return within 1 month;</br>
+										return 70% after 1 month to 3 months;</br>
+										return 50% after 3 months;
+									</i>
+								</span>
+								<span><i>Unused, can still sell</i></span>
+							</li>
+							<li class="clearfix">
+								<span>
+									<i>
+										Quality problem </br>
+										(unused stock goods)
+									</i>
+								</span>
+								<span><i>Seller</i></span>
+								<span>
+									<i>
+										Repair for free within 6 month;</br>
+										after 6 months,may not repair
+									</i>
+								</span>
+								<span>
+									<i>
+										Provide videos and pictures,</br>
+										goods send back to check
+									</i>
+								</span>
+							</li>
+							<li class="clearfix">
+								<span><i>Customed goods not as requirment</i></span>
+								<span><i>——</i></span>
+								<span><i>Exchange/return for free</i></span>
+								<span>
+									<i>
+										Send customer pictures </br>
+										when goods arrive warehouse
+									</i>
+								</span>
+							</li>
+							<li class="clearfix">
+								<span><i>Unused customed goods</i></span>
+								<span><i>Buyer</i></span>
+								<span>
+									<i>
+										Return 70% within 1 month;</br>
+										Return 50% within 1-3 months;</br>
+										cannot return/exchange after 3 months.
+									</i>
+								</span>
+								<span>
+									<i>
+										Provide videos and pictures,</br>
+										goods send back to check
+									</i>
+								</span>
+							</li>
+							<li class="clearfix">
+								<span><i>Used customed goods</i></span>
+								<span><i>Buyer</i></span>
+								<span>
+									<i>
+										Repair for free within 3 month; </br>
+										after 3 months,may not repair
+									</i>
+								</span>
+								<span>
+									<i>
+										Provide videos and pictures,</br>
+										goods send back to check
+									</i>
+								</span>
+							</li>
+							<li class="clearfix">
+								<span><i>Repair used hair</i></span>
+								<span><i>Buyer</i></span>
+								<span>
+									<i>
+										Repair for free,very old hair </br>
+										can not be repaired
+									</i>
+								</span>
+								<span><i>Provide videos and pictures to check</i></span>
+							</li>
+						</ul>
+						
+					</div>
 				</div>
 				
 			</div>
