--- a/catalog/view/theme/default/fot_5.html
+++ b/catalog/view/theme/default/fot_5.html
@@ -225,71 +225,76 @@
 					</ol>
 				</div>
 				
-				<div class="right fot_5 clearfix">
+				<div class="right fot_text clearfix">
 					<h1 class="footer_h1">Shipment & Payment</h1>
 					
-					<div class="text">
-						<h2>Shipment</h2>
-						<p>We ship by FedEx, DHL express and local express.</p>
-						<img class="changeimage" data-image='img/jpg/fot_map.jpg' data-mimage='img/jpg/yd_fot_map.jpg'  />
-						<div class="p_li clearfix">
-							<ul>
-								<li><span>United States:</span><i>2-3</i> working days</li>
-								<li><span>African Countries:</span><i>3-5</i> working days</li>
-								<li><span>Canada:</span><i>2-3</i> working days</li>
-								<li><span>Australia:</span><i>3-5</i> working days</li>
-								<li><span>South America:</span><i>4-5</i> working days</li>
-								<li><span>Middle East:</span><i>4-5</i> working days</li>
-								<li><span>Europe:</span><i>3-4</i> working days</li>
-								<li><span>Asia Countries:</span><i>2-3</i> working days</li>
-							</ul>
+					<div class="fot_5">
+						
+					
+						<div class="text">
+							<h2>Shipment</h2>
+							<p>We ship by FedEx, DHL express and local express.</p>
+							<img class="changeimage" data-image='img/jpg/fot_map.jpg' data-mimage='img/jpg/yd_fot_map.jpg'  />
+							<div class="p_li clearfix">
+								<ul>
+									<li><span>United States:</span><i>2-3</i> working days</li>
+									<li><span>African Countries:</span><i>3-5</i> working days</li>
+									<li><span>Canada:</span><i>2-3</i> working days</li>
+									<li><span>Australia:</span><i>3-5</i> working days</li>
+									<li><span>South America:</span><i>4-5</i> working days</li>
+									<li><span>Middle East:</span><i>4-5</i> working days</li>
+									<li><span>Europe:</span><i>3-4</i> working days</li>
+									<li><span>Asia Countries:</span><i>2-3</i> working days</li>
+								</ul>
+							</div>
+							
+							<h2>Payment</h2>
+							<table>
+								<tr><th>Payment Way</th><th>Account</th><th>Money Arrive Time</th></tr>
+								<tr>
+									<td><span>PayPal</span></td>
+									<td><span>hellena780@live.cn</span></td>
+									<td><span>Instant Payment</span></td>
+								</tr>
+								<tr>
+									<td><span>Western Union</span></td>
+									<td>
+										<span class="span_div1">
+											<i>First Name: </i>ZUJIN<br />
+											<i>Last Name: </i>QIU<br />
+											<i>City: </i>GUANGZHOU<br />
+											<i>Country: </i>CHINA
+										</span>
+									</td>
+									<td><span>Instant Payment</span></td>
+								</tr>
+								<tr>
+									<td><span>Bank Wire Transfer</span></td>
+									<td>
+										<span class="span_div2">
+											<i>Beneficiary Name:</i> HOT BEAUTY HAIR PRODUCTS CO.,LIMITED<br />
+											<i>Bank Name: </i>Hang Seng Bank Limited<br />
+											<i>Beneficiary Account: </i>788-176220-883<br />
+											<i>Swift Code: </i>HASEHKHH<br />
+											<i>Adress: </i>83 Des Voeux Road Central,Hong Kong<br />
+											<i>Beneficiary Address: </i><br />
+											Room 6403, Jiahe Creative Industry Park, No.63 of North
+											Huangbian Road,Baiyuan District,Guangzhou,China.
+										</span>
+									</td>
+									<td><span>2-4 Working Days  Depend on Countries</span></td>
+								</tr>
+							</table>
+							
+							<ol class="clearfix">
+								<li><img src="img/jpg/footer_1.jpg" alt="" /></li>
+								<li><img src="img/jpg/footer_2.jpg" alt="" /></li>
+								<li><img src="img/jpg/footer_3.jpg" alt="" /></li>
+								<li><img src="img/jpg/footer_4.jpg" alt="" /></li>
+							</ol>
+							
 						</div>
-						
-						<h2>Payment</h2>
-						<table>
-							<tr><th>Payment Way</th><th>Account</th><th>Money Arrive Time</th></tr>
-							<tr>
-								<td><span>PayPal</span></td>
-								<td><span>hellena780@live.cn</span></td>
-								<td><span>Instant Payment</span></td>
-							</tr>
-							<tr>
-								<td><span>Western Union</span></td>
-								<td>
-									<span class="span_div1">
-										<i>First Name: </i>ZUJIN<br />
-										<i>Last Name: </i>QIU<br />
-										<i>City: </i>GUANGZHOU<br />
-										<i>Country: </i>CHINA
-									</span>
-								</td>
-								<td><span>Instant Payment</span></td>
-							</tr>
-							<tr>
-								<td><span>Bank Wire Transfer</span></td>
-								<td>
-									<span class="span_div2">
-										<i>Beneficiary Name:</i> HOT BEAUTY HAIR PRODUCTS CO.,LIMITED<br />
-										<i>Bank Name: </i>Hang Seng Bank Limited<br />
-										<i>Beneficiary Account: </i>788-176220-883<br />
-										<i>Swift Code: </i>HASEHKHH<br />
-										<i>Adress: </i>83 Des Voeux Road Central,Hong Kong<br />
-										<i>Beneficiary Address: </i><br />
-										Room 6403, Jiahe Creative Industry Park, No.63 of North
-										Huangbian Road,Baiyuan District,Guangzhou,China.
-									</span>
-								</td>
-								<td><span>2-4 Working Days  Depend on Countries</span></td>
-							</tr>
-						</table>
-						
-						<ol class="clearfix">
-							<li><img src="img/jpg/footer_1.jpg" alt="" /></li>
-							<li><img src="img/jpg/footer_2.jpg" alt="" /></li>
-							<li><img src="img/jpg/footer_3.jpg" alt="" /></li>
-							<li><img src="img/jpg/footer_4.jpg" alt="" /></li>
-						</ol>
-						
+					
 					</div>
 				</div>
 				
