--- a/catalog/view/theme/default/fot_6.html
+++ b/catalog/view/theme/default/fot_6.html
@@ -225,58 +225,61 @@
 					</ol>
 				</div>
 				
-				<div class="right fot_6 clearfix">
+				<div class="right fot_text clearfix">
 					<h1 class="footer_h1">Site Map</h1>
-					<dl>
-						<dt>Product information</dt>
-						<dd><a href="###">Home</a></dd>
-						<dd><a href="###">Hair Club</a></dd>
-						<dd><a href="###">Promotion</a></dd>
-						<dd><a href="###">Company Profile</a></dd>
-						<dd>
-							<a href="###">All Hair Collections</a>
-							<div class="text">
-								<a href="###"> <i>> Double Drawn Funmi Hair</i></a>
-								<a href="###"> <i>> Virgin Brazilian Hair</i></a>
-								<a href="###"> <i>> Virgin Peruvian Hair (Normal Full)</i></a>
-								<a href="###"> <i>> Virgin Peruvian Hair (Very Full)</i></a>
-							</div>
-						</dd>
-						<dd>
-							<a href="###">Closure & Frontal & Wig</a>
-							<div class="text">
-								<a class="clearfix" href="###"> <i>> 360 Frontal</i></a>
-								<a class="clearfix" href="###"> <i>> Customized Bundles Wig</i></a>
-								<a class="clearfix" href="###"> <i>> Lace Frontal</i></a>
-								<a class="clearfix" href="###"> <i>> Stock Lace Wig</i></a>
-							</div>
-						</dd>
-					</dl>
-					
-					<dl>
-						<dt>MY ACCOUNT</dt>
-						<dd><a href="###">My Order</a></dd>
-						<dd><a href="###">Account Information</a></dd>
-						<dd><a href="###">Shopping Cart</a></dd>
-						<dd><a href="###">Address List</a></dd>
-						<dd><a href="###">My Wish List</a></dd>
-						<dd><a href="###">My VIP</a></dd>
-						<dd><a href="###">My Coupon</a></dd>
-						<dd><a href="###">Help Center</a></dd>
-						<dd><a href="###">Sign In</a></dd>
-						<dd><a href="###">Sign Up</a></dd>
-					</dl>
-					<dl>
-						<dt>CUSTOMER SERVICE</dt>
-						<dd><a href="###">How To Order</a></dd>
-						<dd><a href="###">After Sale Service</a></dd>
-						<dd><a href="###">Shipment & Pay</a></dd>
-						<dd><a href="###">Return Policy</a></dd>
-						<dd><a href="###">FAQ</a></dd>
-						<dd><a href="###">Privacy Policy</a></dd>
-						<dd><a href="###">Contact Us</a></dd>
-						<dd><a href="###">Subscribe</a></dd>
-					</dl>
+					<div class="fot_6">
+						<dl>
+							<dt>Product information</dt>
+							<dd><a href="###"><i>Home</i></a></dd>
+							<dd><a href="###"><i>Hair Club</a></i></dd>
+							<dd><a href="###"><i>Promotion</a></i></dd>
+							<dd><a href="###"><i>Company Profile</a></i></dd>
+							<dd>
+								<a href="###">All Hair Collections</a>
+								<div class="text">
+									<a href="###"> <i>> Double Drawn Funmi Hair</i></a>
+									<a href="###"> <i>> Virgin Brazilian Hair</i></a>
+									<a href="###"> <i>> Virgin Peruvian Hair (Normal Full)</i></a>
+									<a href="###"> <i>> Virgin Peruvian Hair (Very Full)</i></a>
+								</div>
+							</dd>
+							<dd>
+								<a href="###">Closure & Frontal & Wig</a>
+								<div class="text">
+									<a class="clearfix" href="###"> <i>> 360 Frontal</i></a>
+									<a class="clearfix" href="###"> <i>> Customized Bundles Wig</i></a>
+									<a class="clearfix" href="###"> <i>> Lace Frontal</i></a>
+									<a class="clearfix" href="###"> <i>> Stock Lace Wig</i></a>
+								</div>
+							</dd>
+						</dl>
+						
+						<dl>
+							<dt>MY ACCOUNT</dt>
+							<dd><a href="###"><i>My Order</i></a></dd>
+							<dd><a href="###"><i>Account Information</i></a></dd>
+							<dd><a href="###"><i>Shopping Cart</i></a></dd>
+							<dd><a href="###"><i>Address List</i></a></dd>
+							<dd><a href="###"><i>My Wish List</i></a></dd>
+							<dd><a href="###"><i>My VIP</i></a></dd>
+							<dd><a href="###"><i>My Coupon</i></a></dd>
+							<dd><a href="###"><i>Help Center</i></a></dd>
+							<dd><a href="###"><i>Sign In</i></a></dd>
+							<dd><a href="###"><i>Sign Up</i></a></dd>
+						</dl>
+						<dl>
+							<dt>CUSTOMER SERVICE</dt>
+							<dd><a href="###"><i>How To Order</i></a></dd>
+							<dd><a href="###"><i>After Sale Service</i></a></dd>
+							<dd><a href="###"><i>Shipment & Pay</i></a></dd>
+							<dd><a href="###"><i>Return Policy</i></a></dd>
+							<dd><a href="###"><i>FAQ</i></a></dd>
+							<dd><a href="###"><i>Privacy Policy</i></a></dd>
+							<dd><a href="###"><i>Contact Us</i></a></dd>
+							<dd><a href="###"><i>Subscribe</i></a></dd>
+						</dl>
+					</div>
+				
 				</div>
 			</div>
 			
